@@ -13,6 +13,7 @@ import za.co.hpsc.web.services.*;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
@@ -131,7 +132,7 @@ public class MatchResultServiceImplTest {
         Optional<MatchDto> result = matchResultService.initMatch(ipscResponse, clubDto);
 
         // Assert
-        assertFalse(result.isEmpty());
+        assertTrue(result.isEmpty());
         verify(matchService, times(1)).findMatch("Existing Match");
     }
 
@@ -275,7 +276,7 @@ public class MatchResultServiceImplTest {
         // Assert
         assertNotNull(result);
         assertEquals(2, result.size());
-        assertEquals(10L, result.get(0).getId());
+        assertEquals(10L, result.getFirst().getId());
         assertEquals(20L, result.get(1).getId());
         verify(matchStageService, times(1)).findMatchStage(1L, 1);
         verify(matchStageService, times(1)).findMatchStage(1L, 2);
@@ -306,10 +307,419 @@ public class MatchResultServiceImplTest {
         // Assert
         assertNotNull(result);
         assertEquals(2, result.size());
-        assertNull(result.get(0).getId());
+        assertNull(result.getFirst().getId());
         assertNull(result.get(1).getId());
         verify(matchStageService, times(1)).findMatchStage(1L, 1);
         verify(matchStageService, times(1)).findMatchStage(1L, 2);
+    }
+
+    @Test
+    public void testInitStages_withMixedExistingAndNonExistingStages_thenReturnsMixedList() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse1 = new StageResponse();
+        stageResponse1.setStageId(1);
+        stageResponse1.setStageName("Existing Stage");
+
+        StageResponse stageResponse2 = new StageResponse();
+        stageResponse2.setStageId(2);
+        stageResponse2.setStageName("New Stage");
+
+        List<StageResponse> stageResponses = List.of(stageResponse1, stageResponse2);
+
+        IpscMatch match = new IpscMatch();
+        match.setId(1L);
+
+        IpscMatchStage matchStage1 = new IpscMatchStage();
+        matchStage1.setId(10L);
+        matchStage1.setMatch(match);
+        matchStage1.setStageNumber(1);
+
+        when(matchStageService.findMatchStage(1L, 1)).thenReturn(Optional.of(matchStage1));
+        when(matchStageService.findMatchStage(1L, 2)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals(10L, result.getFirst().getId());
+        assertNull(result.get(1).getId());
+        verify(matchStageService, times(1)).findMatchStage(1L, 1);
+        verify(matchStageService, times(1)).findMatchStage(1L, 2);
+    }
+
+    @Test
+    public void testInitStages_withSingleStage_thenReturnsSingleStageDto() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse = new StageResponse();
+        stageResponse.setStageId(1);
+        stageResponse.setStageName("Single Stage");
+
+        List<StageResponse> stageResponses = List.of(stageResponse);
+
+        IpscMatch match = new IpscMatch();
+        match.setId(1L);
+
+        IpscMatchStage matchStage = new IpscMatchStage();
+        matchStage.setId(100L);
+        matchStage.setMatch(match);
+        matchStage.setStageNumber(1);
+
+        when(matchStageService.findMatchStage(1L, 1)).thenReturn(Optional.of(matchStage));
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(100L, result.getFirst().getId());
+        assertEquals(1, result.getFirst().getIndex());
+        verify(matchStageService, times(1)).findMatchStage(1L, 1);
+    }
+
+    @Test
+    public void testInitStages_withStageFieldsPreservation_thenPreservesAllFields() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse = new StageResponse();
+        stageResponse.setStageId(5);
+        stageResponse.setStageName("Complex Stage");
+        stageResponse.setTargetPaper(3);
+        stageResponse.setTargetPopper(4);
+        stageResponse.setTargetPlates(6);
+        stageResponse.setTargetDisappear(2);
+        stageResponse.setTargetPenalty(1);
+        stageResponse.setMinRounds(10);
+        stageResponse.setMaxPoints(150);
+
+        List<StageResponse> stageResponses = List.of(stageResponse);
+
+        when(matchStageService.findMatchStage(1L, 5)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        MatchStageDto resultDto = result.getFirst();
+
+        // Verify all fields are preserved
+        assertEquals(5, resultDto.getIndex());
+        assertEquals(5, resultDto.getStageNumber());
+        assertEquals("Complex Stage", resultDto.getStageName());
+        assertEquals(3, resultDto.getTargetPaper());
+        assertEquals(4, resultDto.getTargetPopper());
+        assertEquals(6, resultDto.getTargetPlates());
+        assertEquals(2, resultDto.getTargetDisappear());
+        assertEquals(1, resultDto.getTargetPenalty());
+        assertEquals(10, resultDto.getMinRounds());
+        assertEquals(150, resultDto.getMaxPoints());
+        assertEquals(0, resultDto.getRangeNumber());
+        assertEquals(matchDto, resultDto.getMatch());
+    }
+
+    @Test
+    public void testInitStages_withNullStageFields_thenPreservesNullFields() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse = new StageResponse();
+        stageResponse.setStageId(1);
+        stageResponse.setStageName("Minimal Stage");
+        // All other fields left as null
+
+        List<StageResponse> stageResponses = List.of(stageResponse);
+
+        when(matchStageService.findMatchStage(1L, 1)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        MatchStageDto resultDto = result.getFirst();
+
+        assertNull(resultDto.getTargetPaper());
+        assertNull(resultDto.getTargetPopper());
+        assertNull(resultDto.getTargetPlates());
+        assertNull(resultDto.getTargetDisappear());
+        assertNull(resultDto.getTargetPenalty());
+        assertNull(resultDto.getMinRounds());
+        assertNull(resultDto.getMaxPoints());
+    }
+
+    @Test
+    public void testInitStages_withLargeNumberOfStages_thenReturnsAllStages() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        List<StageResponse> stageResponses = new ArrayList<>();
+        for (int i = 1; i <= 20; i++) {
+            StageResponse stageResponse = new StageResponse();
+            stageResponse.setStageId(i);
+            stageResponse.setStageName("Stage " + i);
+            stageResponses.add(stageResponse);
+        }
+
+        for (int i = 1; i <= 20; i++) {
+            when(matchStageService.findMatchStage(1L, i)).thenReturn(Optional.empty());
+        }
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(20, result.size());
+        for (int i = 0; i < 20; i++) {
+            assertEquals(i + 1, result.get(i).getStageNumber());
+            assertEquals("Stage " + (i + 1), result.get(i).getStageName());
+        }
+        verify(matchStageService, times(20)).findMatchStage(eq(1L), anyInt());
+    }
+
+    @Test
+    public void testInitStages_withZeroAndNegativeTargetValues_thenPreservesValues() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse = new StageResponse();
+        stageResponse.setStageId(1);
+        stageResponse.setStageName("Zero Values Stage");
+        stageResponse.setTargetPaper(0);
+        stageResponse.setTargetPopper(0);
+        stageResponse.setMinRounds(0);
+        stageResponse.setMaxPoints(0);
+
+        List<StageResponse> stageResponses = List.of(stageResponse);
+
+        when(matchStageService.findMatchStage(1L, 1)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        MatchStageDto resultDto = result.getFirst();
+
+        assertEquals(0, resultDto.getTargetPaper());
+        assertEquals(0, resultDto.getTargetPopper());
+        assertEquals(0, resultDto.getMinRounds());
+        assertEquals(0, resultDto.getMaxPoints());
+    }
+
+    @Test
+    public void testInitStages_withExistingStagePreservesEntityData_thenVerifiesDataIntegrity() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse = new StageResponse();
+        stageResponse.setStageId(1);
+        stageResponse.setStageName("Updated Stage Name");
+        stageResponse.setTargetPaper(5);
+        stageResponse.setTargetPopper(6);
+
+        List<StageResponse> stageResponses = List.of(stageResponse);
+
+        IpscMatch match = new IpscMatch();
+        match.setId(1L);
+
+        IpscMatchStage matchStage = new IpscMatchStage();
+        matchStage.setId(50L);
+        matchStage.setMatch(match);
+        matchStage.setStageNumber(1);
+        matchStage.setStageName("Original Stage Name");
+        matchStage.setTargetPaper(3);
+        matchStage.setTargetPopper(4);
+
+        when(matchStageService.findMatchStage(1L, 1)).thenReturn(Optional.of(matchStage));
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        MatchStageDto resultDto = result.getFirst();
+
+        // Verify that init() is called which updates the fields from stageResponse
+        assertEquals(50L, resultDto.getId());
+        assertEquals("Updated Stage Name", resultDto.getStageName());
+        assertEquals(5, resultDto.getTargetPaper());
+        assertEquals(6, resultDto.getTargetPopper());
+    }
+
+    @Test
+    public void testInitStages_withMultipleStagesVerifiesIndexField_thenVerifiesCorrectIndex() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse1 = new StageResponse();
+        stageResponse1.setStageId(10);
+        stageResponse1.setStageName("Stage 10");
+
+        StageResponse stageResponse2 = new StageResponse();
+        stageResponse2.setStageId(20);
+        stageResponse2.setStageName("Stage 20");
+
+        StageResponse stageResponse3 = new StageResponse();
+        stageResponse3.setStageId(30);
+        stageResponse3.setStageName("Stage 30");
+
+        List<StageResponse> stageResponses = List.of(stageResponse1, stageResponse2, stageResponse3);
+
+        when(matchStageService.findMatchStage(1L, 10)).thenReturn(Optional.empty());
+        when(matchStageService.findMatchStage(1L, 20)).thenReturn(Optional.empty());
+        when(matchStageService.findMatchStage(1L, 30)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(3, result.size());
+
+        // Index should match stage ID
+        assertEquals(10, result.getFirst().getIndex());
+        assertEquals(20, result.get(1).getIndex());
+        assertEquals(30, result.get(2).getIndex());
+
+        // Stage number should also match stage ID
+        assertEquals(10, result.getFirst().getStageNumber());
+        assertEquals(20, result.get(1).getStageNumber());
+        assertEquals(30, result.get(2).getStageNumber());
+    }
+
+    @Test
+    public void testInitStages_withSpecialCharactersInStageName_thenPreservesCharacters() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse = new StageResponse();
+        stageResponse.setStageId(1);
+        stageResponse.setStageName("Stage & Co. (Test) - v2.0");
+
+        List<StageResponse> stageResponses = List.of(stageResponse);
+
+        when(matchStageService.findMatchStage(1L, 1)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("Stage & Co. (Test) - v2.0", result.getFirst().getStageName());
+    }
+
+    @Test
+    public void testInitStages_withNullStageName_thenPreservesNullName() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse = new StageResponse();
+        stageResponse.setStageId(1);
+        stageResponse.setStageName(null);
+
+        List<StageResponse> stageResponses = List.of(stageResponse);
+
+        when(matchStageService.findMatchStage(1L, 1)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertNull(result.getFirst().getStageName());
+    }
+
+    @Test
+    public void testInitStages_withLargeStageIds_thenHandlesLargeIds() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse1 = new StageResponse();
+        stageResponse1.setStageId(9999);
+        stageResponse1.setStageName("Large ID Stage 1");
+
+        StageResponse stageResponse2 = new StageResponse();
+        stageResponse2.setStageId(10000);
+        stageResponse2.setStageName("Large ID Stage 2");
+
+        List<StageResponse> stageResponses = List.of(stageResponse1, stageResponse2);
+
+        when(matchStageService.findMatchStage(1L, 9999)).thenReturn(Optional.empty());
+        when(matchStageService.findMatchStage(1L, 10000)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals(9999, result.getFirst().getStageNumber());
+        assertEquals(10000, result.get(1).getStageNumber());
+    }
+
+    @Test
+    public void testInitStages_withAllFieldsAtMaxValues_thenPreservesMaxValues() {
+        // Arrange
+        MatchDto matchDto = new MatchDto();
+        matchDto.setId(1L);
+
+        StageResponse stageResponse = new StageResponse();
+        stageResponse.setStageId(Integer.MAX_VALUE);
+        stageResponse.setStageName("Max Values Stage");
+        stageResponse.setTargetPaper(Integer.MAX_VALUE);
+        stageResponse.setTargetPopper(Integer.MAX_VALUE);
+        stageResponse.setTargetPlates(Integer.MAX_VALUE);
+        stageResponse.setTargetDisappear(Integer.MAX_VALUE);
+        stageResponse.setTargetPenalty(Integer.MAX_VALUE);
+        stageResponse.setMinRounds(Integer.MAX_VALUE);
+        stageResponse.setMaxPoints(Integer.MAX_VALUE);
+
+        List<StageResponse> stageResponses = List.of(stageResponse);
+
+        when(matchStageService.findMatchStage(1L, Integer.MAX_VALUE)).thenReturn(Optional.empty());
+
+        // Act
+        List<MatchStageDto> result = matchResultService.initStages(matchDto, stageResponses);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        MatchStageDto resultDto = result.getFirst();
+
+        assertEquals(Integer.MAX_VALUE, resultDto.getStageNumber());
+        assertEquals(Integer.MAX_VALUE, resultDto.getTargetPaper());
+        assertEquals(Integer.MAX_VALUE, resultDto.getTargetPopper());
+        assertEquals(Integer.MAX_VALUE, resultDto.getTargetPlates());
+        assertEquals(Integer.MAX_VALUE, resultDto.getTargetDisappear());
+        assertEquals(Integer.MAX_VALUE, resultDto.getTargetPenalty());
+        assertEquals(Integer.MAX_VALUE, resultDto.getMinRounds());
+        assertEquals(Integer.MAX_VALUE, resultDto.getMaxPoints());
     }
 
     @Test
